--- a/index.html
+++ b/index.html
@@ -93,10 +93,6 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
@@ -137,43 +133,43 @@
         var resultMessage;
         switch (prediction[0].className) {
           case "이승만":
-            resultMessage = "1~3대 대통령 이승만";
+            resultMessage = "1~3대 대통령 이승만!";
             break;
           case "윤보선":
-            resultMessage = "4대 대통령 윤보선";
+            resultMessage = "4대 대통령 윤보선!";
             break;
           case "박정희":
-            resultMessage = "5~9대 대통령 박정희";
+            resultMessage = "5~9대 대통령 박정희!";
             break;
           case "최규하":
-            resultMessage = "10대 대통령 최규하";
+            resultMessage = "10대 대통령 최규하!";
             break;
           case "전두환":
-            resultMessage = "11~12대 대통령 전두환";
+            resultMessage = "11~12대 대통령 전두환!";
             break;
           case "노태우":
-            resultMessage = "13대 대통령 노태우";
+            resultMessage = "13대 대통령 노태우!";
             break;
           case "김영삼":
-            resultMessage = "14대 대통령 김영삼";
+            resultMessage = "14대 대통령 김영삼!";
             break;
           case "김대중":
-            resultMessage = "15대 대통령 김대중";
+            resultMessage = "15대 대통령 김대중!";
             break;
           case "노무현":
-            resultMessage = "16대 대통령 노무현";
+            resultMessage = "16대 대통령 노무현!";
             break;
           case "이명박":
-            resultMessage = "17대 대통령 이명박";
+            resultMessage = "17대 대통령 이명박!";
             break;
           case "박근혜":
-            resultMessage = "18대 대통령 박근혜";
+            resultMessage = "18대 대통령 박근혜!";
             break;
           case "문재인":
-            resultMessage = "19대 대통령 문재인";
+            resultMessage = "19대 대통령 문재인!";
             break;
           default:
-            resultMessage = "알수없음";
+            resultMessage = "알수없음..";
             break;
         }
         $('.result-message').html(resultMessage);
