--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         for (let i = 0; i < maxPredictions; i++) {
             const classPrediction =
-                prediction[i].className + "와" + (int(prediction[i].probability.toFixed(2)) * 100) + "% 닮으셨습니다";
+                prediction[i].className + "와" + prediction[i].probability.toFixed(2);
             labelContainer.childNodes[i].innerHTML = classPrediction;
         }
     }
