--- a/index.html
+++ b/index.html
@@ -105,40 +105,40 @@
         var resultMessage;
         switch (prediction[0].className) {
           case "이승만":
-            resultMessage = "1~3대 대통령 이승만!";
+            resultMessage = "당신은 1~3대 대통령 이승만과 가장 닮았습니다만!";
             break;
           case "윤보선":
-            resultMessage = "4대 대통령 윤보선!!";
+            resultMessage = "당신은 4대 대통령 윤보선과 가장 닮았습니다!";
             break;
           case "박정희":
-            resultMessage = "5~9대 대통령 박정희!";
+            resultMessage = "당신은 5~9대 대통령 박정희와 가장 닮았습니다희!";
             break;
           case "최규하":
-            resultMessage = "10대 대통령 최규하!";
+            resultMessage = "당신은 10대 대통령 최규하와 가장 닮았습니다!";
             break;
           case "전두환":
-            resultMessage = "11~12대 대통령 전두환!";
+            resultMessage = "당신은 11~12대 대통령 전두환과 가장 닮았습니다!";
             break;
           case "노태우":
-            resultMessage = "13대 대통령 노태우!";
+            resultMessage = "당신은 13대 대통령 노태우와 가장 닮았습니다!";
             break;
           case "김영삼":
-            resultMessage = "14대 대통령 김영삼!";
+            resultMessage = "당신은 14대 대통령 김영삼과 가장 닮았습니다!";
             break;
           case "김대중":
-            resultMessage = "15대 대통령 김대중!";
+            resultMessage = "당신은 15대 대통령 김대중과 가장 닮았습니다!";
             break;
           case "노무현":
-            resultMessage = "16대 대통령 노무현!";
+            resultMessage = "당신은 16대 대통령 노무현과 가장 닮았습니다!";
             break;
           case "이명박":
-            resultMessage = "17대 대통령 이명박!";
+            resultMessage = "당신은 17대 대통령 이명박과 가장 닮았습니다!";
             break;
           case "박근혜":
-            resultMessage = "18대 대통령 박근혜!";
+            resultMessage = "당신은 18대 대통령 박근혜와 가장 닮았습니다!";
             break;
           case "문재인":
-            resultMessage = "19대 대통령 문재인!";
+            resultMessage = "당신은 19대 대통령 문재인과 가장 닮았습니다!";
             break;
           default:
             resultMessage = "알수없음..";
@@ -147,8 +147,10 @@
         $('.result-message').html(resultMessage);
 
         for (let i = 0; i < maxPredictions; i++) {
+          var a = prediction[i].probability.toFixed(2)*100
+          Math.floor(a)
             const classPrediction =
-                prediction[i].className + "의 " + prediction[i].probability.toFixed(2)*100 + "%만큼 닮았습니다";
+                prediction[i].className + "대통령의 " + Math.floor(prediction[i].probability.toFixed(2)*100) + "%만큼 닮았습니다!";
             labelContainer.childNodes[i].innerHTML = classPrediction;
         }
     }
