--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <!-- Go to www.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ec82c2b4451c062"></script>
 
+<meta name="naver-site-verification" content="9014af4fa0a79bbd659b62d5c38e0d1680bd0389" />
+
 </head>
 
 <body>
@@ -157,6 +159,7 @@
 </script>
 
 <!-- end -->
+<div class="any2"></div>
 
 <section class="mb-5 youtube">
   <a target="_blank" href="https://dduckyee.tistory.com/" class="container d-flex flex-row-reverse mt-4 blog-link">제작자 블로그</a>
