--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-  <title>Korean President Face Like</title>
+  <title>대통령 닮은꼴 테스트</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://korea-president.netlify.app">
+  <meta name="description" content="대통령 닮은꼴 테스트">
+  <meta property="og:title" content="대통령 닮은꼴 테스트">
+  <meta property="og:description" content="대통령 닮은꼴 테스트">
+  <meta property="og:url" content="https://korea-president.netlify.app" />
+  <meta name="twitter:card" content="대통령 닮은꼴 테스트" />
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
