--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
 <!-- end -->
 <div class="any2"></div>
 
+<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-rkwr912mmfjn" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
 <section class="mb-5 youtube">
   <a target="_blank" href="https://dduckyee.tistory.com/" class="container d-flex flex-row-reverse mt-4 blog-link">제작자 블로그</a>
   <div class="container mt-5 youtube-cover d-flex flex-row-reverse">
