--- a/index.html
+++ b/index.html
@@ -165,13 +165,21 @@
 </script>
 
 <!-- end -->
-<div class="any2"></div>
 
-<ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-rkwr912mmfjn" 
- data-ad-width   = "320" 
- data-ad-height  = "100"></ins> 
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+<div class ="ad-banner">
+  <ins class="kakao_ad_area" style="display:none;" 
+  data-ad-unit    = "DAN-rkwr912mmfjn" 
+  data-ad-width   = "320" 
+  data-ad-height  = "100"></ins> 
+  <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
+  <ins class="kakao_ad_area" style="display:none;" 
+  data-ad-unit    = "DAN-1iv3rb0jynpyv" 
+  data-ad-width   = "320" 
+  data-ad-height  = "100"></ins> 
+  <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+</div>
+
 
 <section class="mb-5 youtube">
   <a target="_blank" href="https://dduckyee.tistory.com/" class="container d-flex flex-row-reverse mt-4 blog-link">제작자 블로그</a>
