--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 </head>
 
+
 <body>
 
 
@@ -37,6 +38,7 @@
   <section class="section">
     <h1 class="title">인공지능 대통령 닮은꼴 테스트!</h1>
     <h2 class="subtitle">나는 어떤 대통령과 닮았을까?</h2>
+    <h3 class="subtitle">(5초정도의 로딩시간이 필요합니다!)</h3>
   </section>
 <!-- start -->
 
