--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
   </section>
 <!-- start -->
 
+<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-vf982nyjow9y" 
+ data-ad-width   = "728" 
+ data-ad-height  = "90"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
 
 <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <div class="container file-upload">
