--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -238,7 +239,8 @@ $('.image-upload-wrap').bind('dragover', function () {
 		$('.image-upload-wrap').removeClass('image-dropping');
 });
 </script>
-
+<script data-ad-client="ca-pub-9731196479389206" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>;
+<!-- 구글 에드 센스 -->
 </body>
 <!-- Copyright (c) 2020 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
 
